--- a/packages/components/src/components/context-menu/_context-menu.scss
+++ b/packages/components/src/components/context-menu/_context-menu.scss
@@ -40,6 +40,7 @@
   .#{$prefix}--context-menu-option {
     position: relative;
     height: $spacing-07;
+    color: $text-01;
     background-color: $ui-01;
     cursor: pointer;
     transition: background-color $duration--fast-01 motion(standard, productive);
@@ -52,6 +53,12 @@
   .#{$prefix}--context-menu-option--active,
   .#{$prefix}--context-menu-option:hover {
     background-color: $hover-ui;
+  }
+
+  .#{$prefix}--context-menu-option--danger:hover,
+  .#{$prefix}--context-menu-option--danger:focus {
+    color: $text-04;
+    background-color: $danger-01;
   }
 
   .#{$prefix}--context-menu-option > .#{$prefix}--context-menu {
@@ -67,17 +74,9 @@
   }
 
   .#{$prefix}--context-menu-option__content--disabled {
+    color: $disabled-02;
     background-color: $ui-01;
     cursor: not-allowed;
-  }
-
-  .#{$prefix}--context-menu-option__content--disabled
-    .#{$prefix}--context-menu-option__label,
-  .#{$prefix}--context-menu-option__content--disabled
-    .#{$prefix}--context-menu-option__info,
-  .#{$prefix}--context-menu-option__content--disabled
-    .#{$prefix}--context-menu-option__icon {
-    color: $disabled-02;
   }
 
   .#{$prefix}--context-menu-option__content--indented
@@ -92,7 +91,6 @@
     // add top/bottom padding to make sure letters are not cut off by hidden overflow
     padding: $spacing-02 0;
     overflow: hidden;
-    color: $text-01;
     white-space: nowrap;
     text-align: start;
     text-overflow: ellipsis;
@@ -101,7 +99,6 @@
   .#{$prefix}--context-menu-option__info {
     display: inline-flex;
     margin-left: $spacing-05;
-    color: $icon-01;
   }
 
   .#{$prefix}--context-menu-option__icon {
@@ -110,7 +107,6 @@
     width: 1rem;
     height: 1rem;
     margin-right: $spacing-03;
-    color: $icon-01;
   }
 
   .#{$prefix}--context-menu-divider {
